# mitosys

./: .Xresources  .gitignore  .profile  .spacemacs  .vimrc  .xbindkeysrc  .xinitrc  .xprofile  .xsession  .zshrc  README.md  config.ini  i3config.conf  i3status.conf  mitosys  mitosys.py  picom.conf  setup.cfg  setup.py  user-dirs.dirs
.config/: compton.conf  okularpartrc  okularrc  user-dirs.dirs
.config/i3/: config  i3status.conf
.config/rofi/: config
.doom.d/: config.el  custom.el  init.el  packages.el
.vim/ftplugin/: cpp.vim  tex.vim
dotfiles/: .profile  .xsession
dotfiles/.doom.d/: custom.el
dotfiles/.vim/ftplugin/: tex.vim
dotfiles/dwmblocks/: blocks.h
guake/: session.json
mitosys/: __main__.py  core.py
openbox/: autostart  environment  rc.xml
