[metadata]
name = mitosys
version = 0.0.1
author = Julius Stopforth
author_email = author@example.com
description = A decent dotfiles manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudosays/mitosys
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = 

[options.entry_points]
console_scripts =
    ms-cli = mitosys.core:run
